Fixed nav bar z-index positioning

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@ header {
     top: 0;
     display: flex;
     justify-content: space-between;
+    z-index: 99;
 }
 
 header h1 {
@@ -48,7 +49,6 @@ header h1 a:hover, nav ul li a:hover {
 header nav {
     font-size: 110%;
     background-color: var(--header-background);
-    z-index: 2;
 }
 
 header nav ul {
